# HighFreqTrade

./: CMakeLists.txt  CMakePresets.json  launch.json  vcpkg.json  说明
InsightQuote/: CMakeLists.txt  InsightHandle.h  InsightQuote.cpp
insight_quote/: CMakeLists.txt  InsightQuote.h
lib/insight/tcp/windows/example/functional_test/: CMakeLists.txt  functional_test.vcxproj  functional_test.vcxproj.filters
lib/insight/tcp/windows/include/ACE_Wrappers/ace/Compression/: Compression_vc12.sln  Compression_vc14.sln  Compression_vs2017.sln  GNUmakefile
lib/insight/tcp/windows/include/ACE_Wrappers/ace/Compression/rle/: GNUmakefile  GNUmakefile.ACE_RLECompression  rle_vc12.sln  rle_vc14.sln  rle_vs2017.sln
lib/insight/tcp/windows/include/ACE_Wrappers/ace/ETCL/: ETCL_vc12.sln  ETCL_vc14.sln  ETCL_vs2017.sln  GNUmakefile  GNUmakefile.ACE_ETCL  GNUmakefile.ACE_ETCL_Parser
lib/insight/tcp/windows/include/ACE_Wrappers/ace/FlReactor/: GNUmakefile  GNUmakefile.ACE_FlReactor
lib/insight/tcp/windows/include/ACE_Wrappers/ace/Monitor_Control/: GNUmakefile  GNUmakefile.Monitor_Control  Monitor_Control_vc12.sln  Monitor_Control_vc14.sln  Monitor_Control_vs2017.sln
lib/insight/tcp/windows/include/ACE_Wrappers/ace/QoS/: QoS_vc12.sln  QoS_vc14.sln  QoS_vs2017.sln
lib/insight/tcp/windows/include/ACE_Wrappers/ace/QtReactor/: GNUmakefile  GNUmakefile.ACE_Qt4Reactor
lib/insight/tcp/windows/include/ACE_Wrappers/ace/SSL/: GNUmakefile  GNUmakefile.SSL
lib/insight/tcp/windows/include/ACE_Wrappers/ace/TkReactor/: GNUmakefile  GNUmakefile.ACE_TkReactor
lib/insight/tcp/windows/include/ACE_Wrappers/ace/XtReactor/: GNUmakefile  GNUmakefile.ACE_XtReactor
lib/insight/tcp/windows/include/opensssl-1.0.1e/win64/include/openssl/: opensslconf.h
lib/insight/tcp/windows/libs/vs2017/Win32Debug/: ACE_SSLd.lib  ACEd.lib  libeay32.lib  mdc_gateway_clientd.lib  ssleay32.lib
lib/insight/udp/linux/functional_test/: CMakeLists.txt  main.cc
lib/insight/udp/linux/functional_test/protobuf/: EMarketDataType.pb.h
lib/insight/udp/linux/include/mdc_gateway_client/protobuf/: EMarketDataType.pb.cc  ESecurityIDSource.pb.cc  ESecurityIDSource.pb.h  MarketData.pb.cc  MarketData.pb.h
lib/insight/udp/linux/libs/: libACE_SSL.so.6.4.3  libcrypto.so.10  libssl.so.1.0.0  run.sh
test/: CMakeLists.txt  test1.cpp
thirdlibs/: ACE编译说明.txt
thirdlibs/protobuf-3.1.0/cmake/: CMakeLists.txt
vcpkg/: .gitignore
